pkg/pkg3/manifests/gatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: nginx-class
spec:
  controllerName: ingress-nginx
