pkg/pkg3/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-app
  namespace: frontend  
  labels:
    app: car-app
    env: production  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: car-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: car-app
        env: production 
    spec:  # 👈 containers should be here
      containers:
        - name: car-app
          image: alvin254/car-app:v1.0.0
          ports:
            - containerPort: 3000
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          readinessProbe:
            httpGet:
              path:  /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
